# BaczekKPAI

./: .gitignore  AIExport.cpp  BaczekKPAI.cpp  BaczekKPAI.vcproj  CMakeLists.txt  README.markdown  RNG.cpp  RNG.h  TopLevelAI.cpp  Unit.cpp  Unit.h  UnitAI.cpp  UnitGroupAI.cpp  UnitGroupAI.h  make_win32_release.sh  wscript
GUI/: StatusFrame.cpp
data/: AIInfo.lua
src/: AIExport.cpp  AIExport.h  BaczekKPAI.cpp  BaczekKPAI.h  Goal.h  InfluenceMap.cpp  InfluenceMap.h  Log.h  PythonScripting.cpp  PythonScripting.h  RNG.cpp  RNG.h  TopLevelAI.cpp  Unit.cpp  Unit.h  UnitAI.cpp  UnitGroupAI.cpp
src/GUI/: StatusFrame.cpp  StatusFrame.h
src/RStarTree/: RStarBoundingBox.h  RStarTree.h  RStarVisitor.h
src/json_spirit/: json_spirit_value.h
